syntax = "proto3";

package kratos.api;

import "google/protobuf/duration.proto";

option go_package = "ecode/service/internal/conf;conf";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Jwt jwt = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration cache_expiration = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  message File {
    string path = 1;
  }
  Database database = 1;
  Redis redis = 2;
  File file = 3;
}

message Jwt {
  string secret = 1;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  message Polaris {
    repeated string addresses = 1;
    string namespace = 2;
    string token = 3;
  }
  Consul consul = 1;
}

message Tracer {
  message Aliyun {
    string trace_endpoint = 1;
    string metric_endpoint = 2;
    string project = 3;
    string instance_id = 4;
    string access_key_id = 5;
    string access_key_secret = 6;
  }
  Aliyun aliyun = 1;
}

message Log {
  message Aliyun {
    string endpoint = 1;
    string project = 2;
    string logstore = 3;
    string access_key_id = 4;
    string access_key_secret = 5;
  }
  Aliyun aliyun = 1;
}